Revision history for Spreadsheet-ParseXLSX

{{$NEXT}}
      - Give a better error message when opening xls files (mchendriks, #52)

0.20  2015-12-05
      - Fix the test suite on perls compiled with -Duselongdouble (Slaven
        Rezić, #49)

0.19  2015-12-04
      - Support encrypted xlsx files (mazurin, #37)
      - Support absolute internal pathnames (zhouzhen1, #46)
      - Support hidden rows, columns, and sheets (ssimms, #47)

0.18  2015-09-19
      - Fix 5.8 support (rjbs, #39)
      - Fix parsing of files which have empty worksheets (for instance,
        worksheets that are only charts) (Stuart Watt, #43)

0.17  2015-03-25
      - Fix using_1904_date (f20, #31)
      - Add support for get_header, get_footer, get_margin_*, get_print_scale,
        get_paper, is_portrait, and get_start_page, and also fill in the
        BdrDiag, Rotate, Indent, and Shrink format properties (Dave Clarke,
        #35)
      - Fix JasperSoft-created files (rdboisvert, #27)
      - bump required perl version to 5.010 (zhouzhen1, #33)
      - Fix Google Drive-created files (reported by ovidiubarbu, #29)

0.16  2014-07-05
      - Cells should default to locked (f20, #25)
      - Support ColFmtNo and TabColor (Fitz Elliott, #26)
      - try to avoid dying on certain oddly generated spreadsheets with missing
        data (#23)

0.15  2014-07-04
      - Parse shared strings and worksheets as they are read rather than
        reading everything into memory, to reduce memory usage
        (merrilymeredith, #21)

0.14  2014-04-03
      - fix incompatibility with newer Spreadsheet::ParseExcel (reported by
        dsteinbrunner, #22)

0.13  2014-01-29
      - support locked and hidden cells (Tux, #15)
      - "default color" is now returned as undef, rather than assuming it's
        always black (Tux, #15)

0.12  2013-12-09
      - support underline and strikethrough font properties (matrot, #14)

0.11  2013-11-13
      - fix $workbook->get_filename (masonik, #13)

0.10  2013-11-06