@@ -2,6 +2,7 @@ Revision history for Spreadsheet-ParseXLSX
 
 {{$NEXT}}
       - Give a better error message when opening xls files (mchendriks, #52)
+      - Fix opening files where rels use a non-default namespace.
 
 0.20  2015-12-05
       - Fix the test suite on perls compiled with -Duselongdouble (Slaven
